complete bootstrap test

--- a/index.html
+++ b/index.html
@@ -167,6 +167,69 @@
         <span class="visually-hidden">Следующий</span>
       </button>
     </div>
+    <figure class="text-center">
+      <blockquote class="blockquote">
+        <p>Известная цитата, содержащаяся в элементе цитаты.</p>
+      </blockquote>
+      <figcaption class="blockquote-footer">
+        Кто-то, известный в <cite title="Source Title">названии источника</cite>
+      </figcaption>
+    </figure>
+    <div class="container">
+      <div class="row">
+        <div class="wrapper-1 col-12 col-md-6 col-lg-4">
+          <div class="card">
+            <img
+              src="./src/img/Карточка-1.jpg"
+              class="card-img-top"
+              alt="..."
+            />
+            <div class="card-body">
+              <h5 class="card-title">Заголовок карточки</h5>
+              <p class="card-text">
+                Небольшой пример текста, который должен основываться на названии
+                карточки и составлять основную часть содержимого карты.
+              </p>
+              <a href="#" class="btn btn-primary">Перейти куда-нибудь</a>
+            </div>
+          </div>
+        </div>
+        <div class="wrapper-2 col-12 col-md-6 col-lg-4">
+          <div class="card">
+            <img
+              src="./src/img/Карточка-2.jpg"
+              class="card-img-top"
+              alt="..."
+            />
+            <div class="card-body">
+              <h5 class="card-title">Заголовок карточки</h5>
+              <p class="card-text">
+                Небольшой пример текста, который должен основываться на названии
+                карточки и составлять основную часть содержимого карты.
+              </p>
+              <a href="#" class="btn btn-primary">Перейти куда-нибудь</a>
+            </div>
+          </div>
+        </div>
+        <div class="wrapper-3 col-12 col-md-6 col-lg-4">
+          <div class="card">
+            <img
+              src="./src/img/Карточка-3.jpg"
+              class="card-img-top"
+              alt="..."
+            />
+            <div class="card-body">
+              <h5 class="card-title">Заголовок карточки</h5>
+              <p class="card-text">
+                Небольшой пример текста, который должен основываться на названии
+                карточки и составлять основную часть содержимого карты.
+              </p>
+              <a href="#" class="btn btn-primary">Перейти куда-нибудь</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.7/dist/umd/popper.min.js"
       integrity="sha384-zYPOMqeu1DAVkHiLqWBUTcbYfZ8osu1Nd6Z89ify25QV9guujx43ITvfi12/QExE"
